# test-besthackathon-2025-api

./: .env.example  Dockerfile  LICENSE  README.md  compose.yaml  parse.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3bec89db21cb_.py  41a8109cc69c_.py  6df7e70b1abc_.py  c684be83de4e_.py  dfdfc5571985_.py
api/: __init__.py
api/v1/: __init__.py  auth.py  locations.py  system.py
app/controllers/: auth.py  locations.py
app/dependencies/: users.py
app/models/: __init__.py  location.py  user.py
app/repositories/: locations.py  users.py
app/schemas/: auth.py  locations.py  users.py
core/database/: session.py
core/exceptions/: base.py
core/middlewares/: exchandlers.py  middlewares.py
core/repository/: base.py  users.py
core/security/: jwthandler.py
server/: app.py  config.py
